--- a/Drum-Kit/index.html
+++ b/Drum-Kit/index.html
@@ -50,17 +50,13 @@
             <span class="sound">SNARE</span>
         </div>
     </div>
-    <div  data-key="75" class="Drum-Keys">
-        <div class="key">
-            <kbd>K</kbd>
-            <span class="sound">TOM</span>
-        </div>
-    </div>
-    <div  data-key="76" class="Drum-Keys">
-        <div class="key">
-            <kbd>L</kbd>
-            <span class="sound">TINK</span>
-        </div>
-    </div>
+
+    <audio  data-key="65" src="sounds/Clap.wav"></audio>
+    <audio  data-key="83" src="sounds/Open.wav"></audio>
+    <audio  data-key="68"  src="sounds/Kick.wav"></audio>
+    <audio  data-key="70" src="sounds/Open.wav"></audio>
+    <audio  data-key="72" src="sounds/Ride.wav"></audio>
+    <audio  data-key="74"src="sounds/Snare.wav"></audio>
+    <audio  data-key="71"src="sounds/Boom.wav"></audio>
 </body>
 </html>
