Add audio files

--- a/Drum-Project/index.html
+++ b/Drum-Project/index.html
@@ -7,6 +7,18 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="drum-buttons">
+        <div class="drum">A <p>drum</p></div>
+        <div class="drum">S <p>hihat</p></div>
+        <div class="drum">D <p>drum</p></div>
+        <div class="drum">F <p>drum</p></div>
+        <div class="drum">G <p>drum</p></div>
+        <div class="drum">H <p>drum</p></div>
+        <div class="drum">J <p>drum</p></div>
+        <div class="drum">K <p>drum</p></div>
+        <div class="drum">L <p>drum</p></div>
+    </div>
+    <audio id="65"  src="wav/Blend 1.wav"></audio>
     <script src="index.js"></script>
 </body>
 </html>
