Add background that is not working somehow.

--- a/Drum-Project/index.html
+++ b/Drum-Project/index.html
@@ -8,17 +8,19 @@
 </head>
 <body>
     <div class="drum-buttons">
-        <div class="drum">A <p>drum</p></div>
-        <div class="drum">S <p>hihat</p></div>
-        <div class="drum">D <p>drum</p></div>
-        <div class="drum">F <p>drum</p></div>
-        <div class="drum">G <p>drum</p></div>
-        <div class="drum">H <p>drum</p></div>
-        <div class="drum">J <p>drum</p></div>
-        <div class="drum">K <p>drum</p></div>
-        <div class="drum">L <p>drum</p></div>
+        <div class ="drum" id="k65"><h1>A</h1> <p>BLEND</p></div>
+        <div class="drum" id="k83"><h1>S</h1> <p>KICK</p></div>
+        <div class="drum" id="k68"><h1>D</h1> <p>OVERHEAD</p></div>
+        <div class="drum" id="k70"><h1>F</h1> <p>ROOM</p></div>
+        <div class="drum" id="k71"><h1>G</h1> <p>SATURATION</p></div>
+        <div class="drum" id="k72"><h1>H </h1><p>SNARE</p></div>
     </div>
     <audio id="65"  src="wav/Blend 1.wav"></audio>
+    <audio id="83"  src="wav/Kick In 1.wav"></audio>
+    <audio id="68"  src="wav/Overheads 1.wav"></audio>
+    <audio id="70"  src="wav/Room 1.wav"></audio>
+    <audio id="71"  src="wav/Saturation 1.wav"></audio>
+    <audio id="72"  src="wav/Snare Wires 1.wav"></audio>
     <script src="index.js"></script>
 </body>
 </html>
